# dynamic_differential_drive_model

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml
docker/: .bashrc
src/: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  package.xml  requirements.txt
src/config/: pid_gains.yaml
src/gym_gazebo/: requirements.txt
src/gym_gazebo/launch/: baseline.sh  evaluate_gazebo.sh  evaluate_model.sh  requirements.txt  train_gazebo.sh  train_model.sh
src/gym_gazebo/param/: param.yaml
src/gym_gazebo/plugins/: world_edit.cpp
src/gym_gazebo/scripts/: PP_test.py  callbacks.py  evaluate_model.py  gym_env.py  gym_env_ddd.py  gym_env_ddd_gazebo.py  main.py  pid.py  pure_pursuit.py  reward_design.py  test_reset.py  train_model.py
src/gym_gazebo/scripts/old/: sbtraining.py  tb3env.py
src/gym_gazebo/scripts/vehicle_models_copy/: .gitignore  bicycle_model.py
src/launch/: empty_world.launch  evaluate_ppc.sh  params.launch
src/param/: param.yaml
src/plugins/: CMakeLists.txt  hello_world.cpp  model_push.cpp  model_push.world  step.cpp
src/scripts/: command_publisher.py  environment.py  evaluate_model.py  gym_env.py  gym_env_her.py  main.py  pid.py  test.py  test_joystick.py  test_pause.py  train_model.py
src/scripts/old/: model_envs.py
src/scripts/path_following/: path-following.ipynb  pure_pursuit.py
src/scripts/vehicle_models/: bicycle_model.py  differential_drive_model.py  vehicle-models.ipynb
src/scripts/vehicle_models_copy/: README.md  dynamic_differential_drive_model.py
src/srv/: Step.srv
src/worlds/: empty_plugin.world
(+12 files in other folders)
